--- a/CheckPoint II - Spider-Man Esboço/css/style.css
+++ b/CheckPoint II - Spider-Man Esboço/css/style.css
@@ -8,6 +8,7 @@
 
 html{
 scroll-behavior: smooth;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
@@ -16,13 +17,13 @@ body{
 }
 
 header {
-    height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: 'THE AMAZING SPIDER-MAN', 'Roboto';
     border-bottom: 2px solid gray;
     background-image: url(/img/background__menu.png);
+    background-color: red;
 }
 
 .logo {
@@ -59,9 +60,12 @@ ol {
 }
 
 .menu__nav li {
-    border: solid 2px black;
+    border: solid 2px transparent;
     border-radius: 24px;
-    padding: 16px;
+    padding: 8px;
+    align-items: center;
+    justify-items: center;
+    transition: all .8s;
 
 }
 
@@ -69,22 +73,26 @@ ol {
     font-size: 24px;
     color: black;
     text-decoration: none;
-
-    padding: 16px 16px 16px 32px;
+    padding: 32px;
 
 }
 
 .menu__nav li:hover {
     transform: scale(1.25);
-    transition: 2s;
-    border: solid 2px rgb(6, 47, 134);
+    border: solid 4px rgb(6, 47, 134);
     background-image: url(/img/background__botton.png);
     background-position: center;
     background-size: cover;
+    border-radius: 50%;
+
+ 
+    }
+    .imagem5:hover{
+        border: 10px solid #136497;
+        border-radius: 50%;
+    }
 
 
-
-}
 
 .menu__nav a:hover {
     font-size: 32px;
