--- a/CheckPoint II - Spider-Man Esboço/css/style.css
+++ b/CheckPoint II - Spider-Man Esboço/css/style.css
@@ -62,7 +62,7 @@ ol {
 .menu__nav li {
     border: solid 2px transparent;
     border-radius: 24px;
-    padding: 8px;
+    padding: 15px;
     align-items: center;
     justify-items: center;
     transition: all .8s;
@@ -130,7 +130,7 @@ ol {
 
 
 .container___films {
-    gap: 40px;
+    gap: 70px;
     margin-top: 16px;
     display: flex;
     align-items: center;
@@ -154,10 +154,9 @@ ol {
     Width: 308px;
     Height: 412px;
     border-radius: 32px;
-    box-shadow: 8px 4px 4px black;
-    border-left: 1px solid black;
-    border-top: 1px solid black;
-
+    box-shadow:rgb(111,130,150) 0px 20px 30px -10px;
+    border-bottom: 1px solid;
+    border-right: 1px solid;
 }
 
 
@@ -203,7 +202,7 @@ ol {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 15px;
 }
 
 button {
@@ -288,6 +287,15 @@ footer img {
     display: flex;
     align-items: center;
     justify-content: space-between;
+ 
+}
+
+.links img{ 
+transition: all 0.7s;
+}
+
+.links img:hover{
+     text-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .data__dev {
