--- a/CheckPoint II - Spider-Man Esboço/css/style.css
+++ b/CheckPoint II - Spider-Man Esboço/css/style.css
@@ -6,33 +6,50 @@
 
 }
 
-html{
-scroll-behavior: smooth;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+html {
+    scroll-behavior: smooth;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
+body {
 
-    background-color:rgb(229,229,229);
+    background-image: url(/img/background__body.jpg);
+    position: center;
+    background-repeat: repeat-y;
+ 
+
 }
 
 header {
+
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: 'THE AMAZING SPIDER-MAN', 'Roboto';
     border-bottom: 2px solid gray;
     background-image: url(/img/background__menu.png);
-    background-color: red;
+
 }
 
-.logo {
-    height: 144px;
-    border-radius: 50%;
+
+.logo2 {
+    margin-left: 30px;
+    align-items: center;
+    Width: 192px;
+    Height: 55px;
     margin-left: 16px;
     margin-bottom: 8px;
     margin-top: 8px;
+
+
 }
+
+.logo2:hover {
+    transform: scale(1.15);
+    transition: 1.2s;
+}
+
+
 
 .decoration__menu {
     height: 144px;
@@ -83,16 +100,13 @@ ol {
     background-image: url(/img/background__botton.png);
     background-position: center;
     background-size: cover;
+    border-radius: 15px;
+}
+
+.imagem5:hover {
+    border: 10px solid #136497;
     border-radius: 50%;
-
- 
-    }
-    .imagem5:hover{
-        border: 10px solid #136497;
-        border-radius: 50%;
-    }
-
-
+}
 
 .menu__nav a:hover {
     font-size: 32px;
@@ -107,11 +121,10 @@ ol {
     transform: scale(1.10);
     transition: 1s;
 
-
 }
 
 .banner__spider_man {
-    
+
     height: 534px;
     width: 100%;
     background-image: url(/img/banner__spider_man.jpg);
@@ -122,12 +135,19 @@ ol {
 
 }
 
+h3 {
+
+    color:white;
+    text-align: center;
+    padding-bottom: 32px;
+    padding-top: 32px;
+}
+
 .cards__spider {
     display: flex;
     flex-direction: column;
 
 }
-
 
 .container___films {
     gap: 70px;
@@ -136,15 +156,12 @@ ol {
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
-    
+
     background-position: center;
     background-size: cover;
-    background-image: url(/img/background__sectionfilm64.png);
-    padding-bottom: 220px;
+  
+    padding-bottom: 50px;
 }
-
-
-
 
 .cardfilm__1,
 .cardfilm__2,
@@ -153,78 +170,119 @@ ol {
 .cardfilm__5,
 .cardfilm__6,
 .cardfilm__7,
-.cardfilm__8
-{
+.cardfilm__8 {
+    opacity: 10%;
     Width: 308px;
     Height: 412px;
     border-radius: 32px;
-    box-shadow:rgb(111,130,150) 0px 20px 30px -10px;
+    background-color: rgb(229, 229, 229);
+    box-shadow: rgb(111, 130, 150) 0px 20px 30px -10px;
     border-bottom: 1px solid;
     border-right: 1px solid;
     min-width: 300px;
-    overflow-y:scroll;
+    overflow-y: scroll;
+    scroll-behavior: initial;
     overflow-x: hidden;
-    scrollbar-width: none;
-    scrollbar-color: red;
+    cursor: pointer;
+}
+
+.container__text h4{
+    font-size: 24px;
+    text-align:center;
+
+
+}
+
+.container__text p{
+    padding: 16px;
+    line-height: 24px;
+    text-align: center;
+    font-size: 16px;
+
+
 }
 
 .cardfilm__1:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__2:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__3:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__4:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__5:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__6:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 
 .cardfilm__7:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
 .cardfilm__8:hover {
-    transform: scale(1.10);
+    transform: scale(1.20);
     transition: 2s;
     text-decoration: none;
+    background-color: black;
+    color:white;
+    opacity: 100%;
 }
 
-
-
 .button__card {
-    color: black;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
+    transform: scale(1.05);
+    transition: 2s;
+    text-decoration: none;
+    color:white;
 }
 
 button {
@@ -252,13 +310,13 @@ button a {
 .container__backgroundfilm8 {
     Width: 308px;
     Height: 230px;
-   background-position: center;
+    background-position: center;
     background-size: 308px;
     background-repeat: no-repeat;
     border-radius: 32px;
 }
 
-    .container__backgroundfilm1{
+.container__backgroundfilm1 {
     background-image: url(/img/backgroundfilm1.jpg);
 }
 
@@ -290,14 +348,16 @@ button a {
     background-image: url(/img/backgroundfilm8.jpg);
 }
 
-
-
-
 footer {
-   
+
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(229, 229, 229);
 }
 
 .dev__group {
+    display: flex;
+    flex-direction: row;
     padding: 40px;
     display: flex;
     align-items: center;
@@ -321,15 +381,15 @@ footer img {
     display: flex;
     align-items: center;
     justify-content: space-between;
- 
+
 }
 
-.links img{ 
-transition: all 0.7s;
+.links img {
+    transition: all 0.7s;
 }
 
-.links img:hover{
-     text-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+.links img:hover {
+    text-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .data__dev {
@@ -339,16 +399,67 @@ transition: all 0.7s;
     font-weight: bold;
 }
 
-.name__student{
- padding: 8px;
+.name__student {
+    padding: 8px;
 }
 
-.head__spider{
+.homenage__headspider {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.homenage {
+    width: 150px;
+}
+
+.head__spider {
     transition: all 1.2s;
 
 }
-.head__spider:hover{
--webkit-transform: rotateZ(360deg);
-transform: rotatez(360deg);
+
+.head__spider:hover {
+    -webkit-transform: rotateZ(360deg);
+    transform: rotatez(360deg);
+}
+
+@media (max-width: 425px) {
+
+    nav {
+        display: none;
+
+    }
+
+    .logo2 {
+        width: 13
+    }
+
+    footer {
+        font-size: 0.5rem;
+
+
+    }
+
+    footer img {
+        width: 50px;
+
+    }
+
+    .dev__group {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .links {
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .head__spider {
+
+        width: 90px;
+        }
 
 }
